Added profile logic
